--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Recipes of My Favorite Japanese Dishes</h1>
+        <ul>
+            <li><a href="recipes/okonomiyaki.html">Okonomiyaki</a></li>
+            <li><a href="recipes/nikujaga.html">Nikujaga</a></li>
+        </ul>
     </body>
 </html>
