added directions for tonkatsu recipe

--- a/recipes/Tonkatsu.html
+++ b/recipes/Tonkatsu.html
@@ -1,7 +1,7 @@
 <h1>Tonkatsu</h1>
 <img src="./images/tonkatsu.jpeg" alt="Tonkatsu">
 <h2>How to Cook</h2>
-<h4>Ingredients</h4>
+<h3>Ingredients</h3>
     <p>Serving 2</p>
     <emp>For shredded cabbage salad</emp>
     <ul>
@@ -29,7 +29,80 @@
         <li>1/8 tsp ground black pepper</li>
         <li>3 cups vegetable oil</li>
     </ul>
-<h4>Directions</h4>
-    <ol>
-        <li>.</li>
-    </ol>
+<h3>Directions</h3>
+    <h4>Prep shredded cabbages</h4>
+        <ol>
+            <li>Shred green cabbage super thinly with a knife or a slicer.</li>
+            <li>Thinly slice cucumber diagonally.</li>
+            <li>Toss cabbage and cucumber together and set aside.</li>
+            <li>Prep Japanese sesame dressing and keep refrigerated until ready to serve.</li>
+        </ol>
+    <h4>Prep dipping sauce</h4>
+        <ol>
+            <li>
+                Grind white sesame seeds and black sesame seeds with a pestle and mortar.
+                Leave some seeds unground for texture.
+            </li>
+            <li>Mix the seeds with tonkatsu sauce and keep refrigerated until ready to serve.</li>
+        </ol>
+    <h4>Prep panko and breading</h4>
+        <ol>
+            <li>Spread panko to a deep dish and spray with water until panko is moist.</li>
+            <li>Set aside for 15 minutes or until panko gets soft and tender.</li>
+            <li>
+                While panko is getting soft, crack large egg in another deep dish and pour vegetable oil. 
+                Whisk together until well combined.
+            </li>
+            <li>Prepare another deep dish with all-purpose flour.</li>
+        </ol>
+    <h4>Prep meat</h4>
+        <ol>
+            <li>Use a knife to remove extra fat from pork loin chops. </li>
+            <li>Make several slits on the connective tissue between meat and fat. Flip the meat and make slits on the tissue.</li>
+            <li>Pound both sides of meat with back of knife or meat tenderizer and mold the meat back into its original shape with hands.</li>
+            <li>Season both sides of meat with kosher salt and black pepper.</li>
+        </ol>
+    <h4>Bread the pork</h4>
+        <ol>
+            <li>Dredge the pork in the flour and dust off any excess.</li>
+            <li>Dip the pork into egg mixture and coat well.</li>
+            <li>
+                Finally, dredge the pork in panko, gently pressing the panko onto the pork.
+                gently shake off excess panko, then place the pork onto a tray or plate.
+            </li>
+            <li>Set the pork aside for 5 to 10 minutes so the breading will set.</li>
+        </ol>
+    <h4>Deep fry: first frying</h4>
+        <ol>
+            <li>Add vegetable oil to a pot and bring it to 340F (170C) over medium heat.
+                Make sure your oil is around 2 inches deep in the pot.
+            </li>
+            <li>Gently put a piece of pork into the oil and cook for 1 minute without flipping.
+                <bold>Do not touch the pork for 30 seconds!</bold>
+            </li>
+            <li>After a minute, flip the pork and cook the other side for 1 minute.</li>
+            <li>
+                Take out the pork and remove excess oil by holding it vertically over the pot for few seconds.
+                Place it on a wire rack or a plate sheeted with paper towel. Let it sit for 4 minutes.
+                The hot oil on the exterior will slowly continue cooking the meat.
+            </li>
+            <li>
+                Turn off the heat of pot for a moment and scoop up and discard any fried crumbs in the oil. 
+                By doing this way, the oil does not get darker and dirtier with burnt crumbs.
+                Turn on the heat and bring the oil back to 340F (170C).
+            </li>
+            <li>Repeat the process until all pieces of pork are fried.</li>
+        </ol>
+    <h4>Deep fry: second frying</h4>
+        <ol>
+            <li>
+                Bring the oil to 355F (180C) and fry the pork for 30 seconds on each side.
+                Remove the pork from the pot and drain excess oil. Place it on a rack or a plate.
+            </li>
+            <li>Scoop up and discard the fried crumbs in the oil, then continue the same process until all the porks are fried again.</li>
+        </ol>
+    <h4>Serve</h4>
+        <ol>
+            <li>Cut the tonkatsu into slices 3/4 inch wide.</li>
+            <li>Place it on a plate and serve it with the shredded cabbage and cucumber, the sesame dressing in a cup, and the sesame dipping sauce on the side.</li>
+        </ol>
