--- a/recipes/okonomiyaki.html
+++ b/recipes/okonomiyaki.html
@@ -1,6 +1,6 @@
 
     <h1>Okonomiyaki</h1>
-        <img src="./images/okonomiyaki.jpg" alt="Okonomiyaki">
+        <img src="./images/okonomiyaki.jpeg" alt="Okonomiyaki">
     <h2>How to cook</h2>
     <h4>Ingredients</h4>
         <p>3 servings</p>
