linked css file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTL-8">
         <title>Recipe Website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
