--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Recipes of My Favorite Japanese Dishes</h1>
+        <h1 class="title">Recipes of My Favorite Japanese Dishes</h1>
         <ul>
             <li><a href="recipes/okonomiyaki.html">Okonomiyaki</a></li>
             <li><a href="recipes/nikujaga.html">Nikujaga</a></li>
