--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1 class="title">Recipes of My Favorite Japanese Dishes</h1>
-        <ul>
+        <ul class="links">
             <li><a href="recipes/okonomiyaki.html">Okonomiyaki</a></li>
             <li><a href="recipes/nikujaga.html">Nikujaga</a></li>
             <li><a href="recipes/Tonkatsu.html">Tonkatsu</a>
