--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     </head>
 
     <body>
-        <h1 class="title">Recipes of My Favorite Japanese Dishes</h1>
-        <ul class="links">
-            <li><a href="recipes/okonomiyaki.html">Okonomiyaki</a></li>
-            <li><a href="recipes/nikujaga.html">Nikujaga</a></li>
-            <li><a href="recipes/Tonkatsu.html">Tonkatsu</a>
+        <div class="card">
+            <h1 class="title">Recipes of My Favorite Japanese Dishes</h1>
+        </div>
+        <ul class="link-list">
+            <li class="okonomiyaki"><a href="recipes/okonomiyaki.html">Okonomiyaki</a></li>   
+            <li class="nikujaga"><a href="recipes/nikujaga.html">Nikujaga</a></li>
+            <li class="tonkatsu"><a href="recipes/Tonkatsu.html">Tonkatsu</a>
         </ul>
     </body>
 </html>
